[package]
name = "crdt"
version = "0.4.0"
edition = "2021"

[dependencies]
tinyvec = { version = "1.6.0", features = [ "alloc" ] }
unicode-segmentation = "1.10.1"
itertools = "0.11.0"
fastrand = "2.0.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[features]
default = []
serde = [ "serde_crate", "tinyvec/serde" ]

[dependencies.serde_crate]
package = "serde"
features = [ "derive" ]
default-features = false
version = "1.0.164"
optional = true
